// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ResizeBox/demo/basic.md correctly 1`] = `
<div>
  <div
    class="arco-resizebox"
    style="width:500px;min-width:100px;max-width:100%;height:200px;text-align:center"
  >
    <div
      class="arco-typography"
    >
      We are building the future of content discovery and creation.
    </div>
    <div
      class="arco-divider arco-divider-horizontal"
      role="separator"
    />
    <div
      class="arco-typography"
    >
      ByteDance's content platforms enable people to enjoy content powered by AI technology. We inform, entertain, and inspire people across language, culture and geography.
    </div>
    <div
      class="arco-divider arco-divider-horizontal arco-divider-with-text arco-divider-with-text-center"
      role="separator"
    >
      <span
        class="arco-divider-text arco-divider-text-center"
      >
        ByteDance
      </span>
    </div>
    <div
      class="arco-typography"
    >
      Yiming Zhang is the founder and CEO of ByteDance.
    </div>
    <div
      class="arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-direction-right"
    >
      <div
        class="arco-resizebox-trigger-icon-wrapper"
      >
        <span
          class="arco-resizebox-trigger-icon-empty"
        />
        <span
          class="arco-resizebox-trigger-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-drag-dot-vertical"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
              fill="currentColor"
              stroke="none"
            />
            <path
              d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
            />
          </svg>
        </span>
        <span
          class="arco-resizebox-trigger-icon-empty"
        />
      </div>
    </div>
    <div
      class="arco-resizebox-trigger arco-resizebox-trigger-horizontal arco-resizebox-direction-bottom"
    >
      <div
        class="arco-resizebox-trigger-icon-wrapper"
      >
        <span
          class="arco-resizebox-trigger-icon-empty"
        />
        <span
          class="arco-resizebox-trigger-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-drag-dot"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z"
              fill="currentColor"
              stroke="none"
            />
            <path
              d="M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z"
            />
          </svg>
        </span>
        <span
          class="arco-resizebox-trigger-icon-empty"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ResizeBox/demo/control.md correctly 1`] = `
<div>
  <div
    class="arco-resizebox"
    style="min-width:100px;max-width:100%;text-align:center;width:500px;height:200px"
  >
    <div
      class="arco-typography"
    >
      We are building the future of content discovery and creation.
    </div>
    <div
      class="arco-divider arco-divider-horizontal"
      role="separator"
    />
    <div
      class="arco-typography"
    >
      ByteDance's content platforms enable people to enjoy content powered by AI technology. We inform, entertain, and inspire people across language, culture and geography.
    </div>
    <div
      class="arco-divider arco-divider-horizontal arco-divider-with-text arco-divider-with-text-center"
      role="separator"
    >
      <span
        class="arco-divider-text arco-divider-text-center"
      >
        ByteDance
      </span>
    </div>
    <div
      class="arco-typography"
    >
      Yiming Zhang is the founder and CEO of ByteDance.
    </div>
    <div
      class="arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-direction-right"
    >
      <div
        class="arco-resizebox-trigger-icon-wrapper"
      >
        <span
          class="arco-resizebox-trigger-icon-empty"
        />
        <span
          class="arco-resizebox-trigger-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-drag-dot-vertical"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
              fill="currentColor"
              stroke="none"
            />
            <path
              d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
            />
          </svg>
        </span>
        <span
          class="arco-resizebox-trigger-icon-empty"
        />
      </div>
    </div>
    <div
      class="arco-resizebox-trigger arco-resizebox-trigger-horizontal arco-resizebox-direction-bottom"
    >
      <div
        class="arco-resizebox-trigger-icon-wrapper"
      >
        <span
          class="arco-resizebox-trigger-icon-empty"
        />
        <span
          class="arco-resizebox-trigger-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-drag-dot"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z"
              fill="currentColor"
              stroke="none"
            />
            <path
              d="M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z"
            />
          </svg>
        </span>
        <span
          class="arco-resizebox-trigger-icon-empty"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ResizeBox/demo/custom-triggers.md correctly 1`] = `
<div>
  <div
    class="arco-resizebox"
    style="width:500px;min-width:100px;max-width:100%;height:200px;text-align:center"
  >
    <div
      class="arco-typography"
    >
      We are building the future of content discovery and creation.
    </div>
    <div
      class="arco-divider arco-divider-horizontal"
      role="separator"
    />
    <div
      class="arco-typography"
    >
      ByteDance's content platforms enable people to enjoy content powered by AI technology. We inform, entertain, and inspire people across language, culture and geography.
    </div>
    <div
      class="arco-divider arco-divider-horizontal arco-divider-with-text arco-divider-with-text-center"
      role="separator"
    >
      <span
        class="arco-divider-text arco-divider-text-center"
      >
        ByteDance
      </span>
    </div>
    <div
      class="arco-typography"
    >
      Yiming Zhang is the founder and CEO of ByteDance.
    </div>
    <div
      class="arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-direction-right"
    >
      <div
        class="resizebox-demo-custom-trigger resizebox-demo-custom-trigger-vertical"
      >
        <div
          class="resizebox-demo-custom-trigger-line"
        />
      </div>
    </div>
    <div
      class="arco-resizebox-trigger arco-resizebox-trigger-horizontal arco-resizebox-direction-bottom"
    >
      <div
        class="resizebox-demo-custom-trigger resizebox-demo-custom-trigger-horizontal"
      >
        <div
          class="resizebox-demo-custom-trigger-line"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ResizeBox/demo/layout.md correctly 1`] = `
<div
  class="layout-basic-demo"
>
  <section
    class="arco-layout"
  >
    <header
      class="arco-layout-header"
    >
      Header
    </header>
    <section
      class="arco-layout"
    >
      <aside
        class="arco-resizebox arco-layout-sider arco-layout-sider-light"
        style="width:200px;min-width:150px;max-width:500px;height:200px"
      >
        <div
          class="arco-layout-sider-children"
        >
          Sider
        </div>
        <div
          class="arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-direction-right"
        >
          <div
            class="arco-resizebox-trigger-icon-wrapper"
          >
            <span
              class="arco-resizebox-trigger-icon-empty"
            />
            <span
              class="arco-resizebox-trigger-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-drag-dot-vertical"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
                  fill="currentColor"
                  stroke="none"
                />
                <path
                  d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
                />
              </svg>
            </span>
            <span
              class="arco-resizebox-trigger-icon-empty"
            />
          </div>
        </div>
      </aside>
      <main
        class="arco-layout-content"
      >
        Content
      </main>
    </section>
    <footer
      class="arco-layout-footer"
    >
      Footer
    </footer>
  </section>
</div>
`;

exports[`renders ResizeBox/demo/nested_split.md correctly 1`] = `
<div>
  <div
    class="arco-resizebox-split arco-resizebox-split-horizontal"
    style="height:200px;width:500px;border:1px solid var(--color-border)"
  >
    <div
      class="arco-resizebox-split-pane first-pane"
      style="flex-basis:calc(50% - 0px)"
    >
      <div
        class="arco-typography"
      >
        Right
      </div>
    </div>
    <div
      class="arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-split-trigger"
    >
      <div
        class="arco-resizebox-trigger-icon-wrapper"
      >
        <span
          class="arco-resizebox-trigger-icon-empty"
        />
        <span
          class="arco-resizebox-trigger-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-drag-dot-vertical"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
              fill="currentColor"
              stroke="none"
            />
            <path
              d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
            />
          </svg>
        </span>
        <span
          class="arco-resizebox-trigger-icon-empty"
        />
      </div>
    </div>
    <div
      class="arco-resizebox-split-pane second-pane"
    >
      <div>
        <div
          class="arco-resizebox-split arco-resizebox-split-vertical"
          style="height:200px"
        >
          <div
            class="arco-resizebox-split-pane first-pane"
            style="flex-basis:calc(50% - 0px)"
          >
            <div
              class="arco-typography"
            >
              Top
            </div>
          </div>
          <div
            class="arco-resizebox-trigger arco-resizebox-trigger-horizontal arco-resizebox-split-trigger"
          >
            <div
              class="arco-resizebox-trigger-icon-wrapper"
            >
              <span
                class="arco-resizebox-trigger-icon-empty"
              />
              <span
                class="arco-resizebox-trigger-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-drag-dot"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z"
                    fill="currentColor"
                    stroke="none"
                  />
                  <path
                    d="M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z"
                  />
                </svg>
              </span>
              <span
                class="arco-resizebox-trigger-icon-empty"
              />
            </div>
          </div>
          <div
            class="arco-resizebox-split-pane second-pane"
          >
            <div
              class="arco-typography"
            >
              Bottom
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ResizeBox/demo/split.md correctly 1`] = `
<div>
  <div
    class="arco-resizebox-split arco-resizebox-split-horizontal"
    style="height:200px;width:500px;border:1px solid var(--color-border)"
  >
    <div
      class="arco-resizebox-split-pane first-pane"
      style="flex-basis:calc(50% - 0px)"
    >
      <div
        class="arco-typography"
      >
        Right
      </div>
    </div>
    <div
      class="arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-split-trigger"
    >
      <div
        class="arco-resizebox-trigger-icon-wrapper"
      >
        <span
          class="arco-resizebox-trigger-icon-empty"
        />
        <span
          class="arco-resizebox-trigger-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-drag-dot-vertical"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
              fill="currentColor"
              stroke="none"
            />
            <path
              d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
            />
          </svg>
        </span>
        <span
          class="arco-resizebox-trigger-icon-empty"
        />
      </div>
    </div>
    <div
      class="arco-resizebox-split-pane second-pane"
    >
      <div
        class="arco-typography"
      >
        Left
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ResizeBox/demo/splitGroup.md correctly 1`] = `
<div
  class="arco-resizebox-split-group arco-resizebox-split-group-vertical resizebox-split-group-demo"
>
  <div
    class="arco-resizebox-split-group-pane"
    style="flex-basis:calc(0.5px - 0px)"
  >
    <div
      class="arco-resizebox-split-group arco-resizebox-split-group-horizontal resizebox-split-group-demo-horizontal"
    >
      <div
        class="arco-resizebox-split-group-pane"
        style="flex-basis:calc(0.25px - 0px)"
      >
        <div
          class="resizebox-split-group-demo-content"
        >
          <div
            class="arco-typography"
          >
            <div
              class="arco-typography"
            >
              <span
                class="arco-typography"
              >
                <mark>
                  pane 0
                </mark>
              </span>
              <br />
              <span
                class="arco-typography"
              >
                <code>
                  min：0
                </code>
              </span>
              <br />
              <span
                class="arco-typography"
              >
                <code>
                  size： 0.2
                </code>
              </span>
              <br />
              <span
                class="arco-typography"
              >
                <code>
                  offset：initial
                </code>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-split-group-trigger"
      >
        <div
          class="arco-resizebox-trigger-icon-wrapper"
        >
          <span
            class="arco-resizebox-trigger-icon arco-resizebox-trigger-prev"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-caret-left"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M13.171 24.937a1.2 1.2 0 0 1 0-1.874L30.051 9.56c.785-.629 1.949-.07 1.949.937v27.006c0 1.006-1.164 1.566-1.95.937L13.171 24.937Z"
                fill="currentColor"
                stroke="none"
              />
            </svg>
          </span>
          <span
            class="arco-resizebox-trigger-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-drag-dot-vertical"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
                fill="currentColor"
                stroke="none"
              />
              <path
                d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
              />
            </svg>
          </span>
          <span
            class="arco-resizebox-trigger-icon-empty"
          />
        </div>
      </div>
      <div
        class="arco-resizebox-split-group-pane"
        style="flex-basis:calc(0.25px - 0px)"
      >
        <div
          class="resizebox-split-group-demo-content"
        >
          <div
            class="arco-typography"
          >
            <div
              class="arco-typography"
            >
              <span
                class="arco-typography"
              >
                <mark>
                  pane 1
                </mark>
              </span>
              <br />
              <span
                class="arco-typography"
              >
                <code>
                  min：50px
                </code>
              </span>
              <br />
              <span
                class="arco-typography"
              >
                <code>
                  size： 0.4
                </code>
              </span>
              <br />
              <span
                class="arco-typography"
              >
                <code>
                  offset：initial
                </code>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-split-group-trigger"
      >
        <div
          class="arco-resizebox-trigger-icon-wrapper"
        >
          <span
            class="arco-resizebox-trigger-icon-empty"
          />
          <span
            class="arco-resizebox-trigger-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-drag-dot-vertical"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
                fill="currentColor"
                stroke="none"
              />
              <path
                d="M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z"
              />
            </svg>
          </span>
          <span
            class="arco-resizebox-trigger-icon-empty"
          />
        </div>
      </div>
      <div
        class="arco-resizebox-split-group-pane"
        style="flex-basis:calc(0.25px - 0px)"
      >
        <div
          class="resizebox-split-group-demo-content"
        >
          <div
            class="arco-typography"
          >
            <div
              class="arco-typography"
            >
              <span
                class="arco-typography"
              >
                <mark>
                  pane 2
                </mark>
              </span>
              <br />
              <span
                class="arco-typography"
              >
                <code>
                  min：0
                </code>
              </span>
              <br />
              <span
                class="arco-typography"
              >
                <code>
                  size： not set
                </code>
              </span>
              <br />
              <span
                class="arco-typography"
              >
                <code>
                  offset：initial
                </code>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="arco-resizebox-trigger arco-resizebox-trigger-vertical arco-resizebox-trigger-not-resizable arco-resizebox-split-group-trigger"
      >
        <div
          class="resizebox-split-group-demo-trigger"
        >
          <span
            class="arco-resizebox-trigger-icon arco-resizebox-trigger-prev"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-double-left"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M36.857 9.9 22.715 24.042l14.142 14.142M25.544 9.9 11.402 24.042l14.142 14.142"
              />
            </svg>
          </span>
          <span
            class="arco-resizebox-trigger-icon-empty"
          />
          <span
            class="arco-resizebox-trigger-icon arco-resizebox-trigger-next"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-double-right"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="m11.143 38.1 14.142-14.142L11.143 9.816M22.456 38.1l14.142-14.142L22.456 9.816"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="arco-resizebox-split-group-pane"
        style="flex-basis:calc(0.25px - 0px)"
      >
        <div
          class="resizebox-split-group-demo-content"
        >
          <div
            class="arco-typography"
          >
            <div
              class="arco-typography"
            >
              <span
                class="arco-typography"
              >
                <mark>
                  pane 3
                </mark>
              </span>
              <br />
              <span
                class="arco-typography"
              >
                <code>
                  min：0
                </code>
              </span>
              <br />
              <span
                class="arco-typography"
              >
                <code>
                  size： not set
                </code>
              </span>
              <br />
              <span
                class="arco-typography"
              >
                <code>
                  offset：initial
                </code>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-resizebox-trigger arco-resizebox-trigger-horizontal arco-resizebox-split-group-trigger"
  >
    <div
      class="arco-resizebox-trigger-icon-wrapper"
    >
      <span
        class="arco-resizebox-trigger-icon-empty"
      />
      <span
        class="arco-resizebox-trigger-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-drag-dot"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z"
            fill="currentColor"
            stroke="none"
          />
          <path
            d="M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z"
          />
        </svg>
      </span>
      <span
        class="arco-resizebox-trigger-icon-empty"
      />
    </div>
  </div>
  <div
    class="arco-resizebox-split-group-pane"
    style="flex-basis:calc(0.5px - 0px)"
  >
    <div
      class="arco-resizebox-split-group arco-resizebox-split-group-vertical resizebox-split-group-demo-vertical"
    >
      <div
        class="arco-resizebox-split-group-pane"
        style="flex-basis:calc(0.3333333333333333px - 0px)"
      >
        <div
          class="resizebox-split-group-demo-content"
        >
          <span
            class="arco-typography"
          >
            <mark>
              pane 0
            </mark>
          </span>
        </div>
      </div>
      <div
        class="arco-resizebox-trigger arco-resizebox-trigger-horizontal arco-resizebox-split-group-trigger"
      >
        <div
          class="arco-resizebox-trigger-icon-wrapper"
        >
          <span
            class="arco-resizebox-trigger-icon arco-resizebox-trigger-prev"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-caret-up"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M23.063 13.171a1.2 1.2 0 0 1 1.875 0l13.503 16.88c.628.785.069 1.949-.937 1.949H10.497c-1.006 0-1.565-1.164-.937-1.95l13.503-16.879Z"
                fill="currentColor"
                stroke="none"
              />
            </svg>
          </span>
          <span
            class="arco-resizebox-trigger-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-drag-dot"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z"
                fill="currentColor"
                stroke="none"
              />
              <path
                d="M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z"
              />
            </svg>
          </span>
          <span
            class="arco-resizebox-trigger-icon arco-resizebox-trigger-next"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-caret-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24.938 34.829a1.2 1.2 0 0 1-1.875 0L9.56 17.949c-.628-.785-.069-1.949.937-1.949h27.007c1.006 0 1.565 1.164.937 1.95L24.937 34.829Z"
                fill="currentColor"
                stroke="none"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="arco-resizebox-split-group-pane"
        style="flex-basis:calc(0.3333333333333333px - 0px)"
      >
        <div
          class="resizebox-split-group-demo-content"
        >
          <span
            class="arco-typography"
          >
            <mark>
              pane 1
            </mark>
          </span>
        </div>
      </div>
      <div
        class="arco-resizebox-trigger arco-resizebox-trigger-horizontal arco-resizebox-split-group-trigger"
      >
        <div
          class="arco-resizebox-trigger-icon-wrapper"
        >
          <span
            class="arco-resizebox-trigger-icon-empty"
          />
          <span
            class="arco-resizebox-trigger-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-drag-dot"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z"
                fill="currentColor"
                stroke="none"
              />
              <path
                d="M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z"
              />
            </svg>
          </span>
          <span
            class="arco-resizebox-trigger-icon arco-resizebox-trigger-next"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-caret-down"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24.938 34.829a1.2 1.2 0 0 1-1.875 0L9.56 17.949c-.628-.785-.069-1.949.937-1.949h27.007c1.006 0 1.565 1.164.937 1.95L24.937 34.829Z"
                fill="currentColor"
                stroke="none"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="arco-resizebox-split-group-pane"
        style="flex-basis:calc(0.3333333333333333px - 0px)"
      >
        <div
          class="resizebox-split-group-demo-content"
        >
          <span
            class="arco-typography"
          >
            <mark>
              pane 2
            </mark>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
